--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ iprecommit = "^0.5.2"
 flake8 = "^7.1.1"
 mypy = "^1.13.0"
 black = "^24.10.0"
+pytest = "^8.3.3"
 
 [project.urls]
 Homepage = "https://github.com/iafisher/teenycli/"
